basic home page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="main.css">
+</head>
+<body>
+
+    <div id="main">
+        <img src="images/hero.JPG" alt="" srcset="">
+        <h1>York Street Coffee</h1>
+        <h2>every other Sat at 25th and York, Mission</h2>
+        <h3>A garage-grown, neighborly community in the Mission District of San Francisco.    We pop-up every other Saturday. You will meet someone new...and it’ll be great! We like to experiment with transparent pricing models, provacative flavor combos and artist collabs. Coffee always served in reusable glassware.    No  to-go  cups,  no  to-go  experiences.   Donation  via   Venmo/cash.</h3>
+        <h4><a href="https://www.instagram.com/yorkstreetsf/">@YorkStreetSF</a></h4>
+    </div>
+    
+</body>
+</html>
