--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img id="logo" src="images/logoLong.png" alt="" srcset="">
         <!-- <h1>York Street Coffee</h1> -->
         <h2>A bi-weekly gathering space in the Mission</h2>
-        <h3>A garage-grown, neighborly  community in the  Mission  District  of San Francisco.    We pop-up every other Saturday. You will meet someone new...and it’ll be great! We like to experiment with transparent pricing models, provacative flavor combos and artist collabs. coffee always served in reusable glassware.    No  to-go  cups,  no  to-go  experiences.   Donations  via   Venmo or cash.</h3>
+        <h3>A garage-grown, neighborly  community in the  Mission  District  of San Francisco.    We pop-up every other Saturday. You will meet someone new...and it’ll be great! We like to experiment with transparent pricing models, provacative flavor combos and artist collabs. coffee always served in reusable glassware.    No  to-go  cups,  no  to-go  experiences.   Donation  via   Venmo/cash.</h3>
     </div>
 
     <a href="https://www.instagram.com/yorkstreetsf" target="_blank" id="instaButton" title="instagram">
