--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     </div>
 
     <div id="main">
-        <img id="hero" src="images/hero.JPG" alt="" srcset="">
+        <video class="hero" width="280" height="200" autoplay muted loop>
+            <source src="images/trailer.mov" type="video/mp4">
+            <img class="hero" src="images/hero.JPG" alt="" srcset="">
+        </video>
         <img id="logo" src="images/logoLong.png" alt="" srcset="">
         <!-- <h1>York Street Coffee</h1> -->
         <h2>A bi-weekly gathering space in the Mission</h2>
