--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </div>
 
     <div id="main">
-        <video class="hero" width="280" height="200" autoplay muted loop>
-            <source src="images/trailer.mov" type="video/mp4">
+        <video class="hero" width="280" height="200" autoplay muted loop playsinline>
+            <source src="images/trailer.mp4" type="video/mp4">
             <img class="hero" src="images/hero.JPG" alt="" srcset="">
         </video>
         <img id="logo" src="images/logoLong.png" alt="" srcset="">
