--- a/index.html
+++ b/index.html
@@ -22,17 +22,19 @@
             <div class="timeLocation">
                 11am - 3pm @ Evolved SF, 3067 24th St
             </div>
+            <a id="calLink" href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20220403T180000Z%2F20220403T220000Z&location=Evolved%20SF%2C%203067%2024th%20St&text=York%20Street%20Coffee" target="_blank" title="Save Event in my Calendar">Add to Calendar</a>
+            <!-- https://www.labnol.org/calendar/ -->
         </div>
     </div>
 
     <div id="main">
-        <video class="hero" width="280" height="200" autoplay muted loop playsinline>
+        <video class="hero" width="290" height="200" autoplay muted loop playsinline>
             <source src="images/trailer.mp4" type="video/mp4">
             <img class="hero" src="images/hero.JPG" alt="" srcset="">
         </video>
         <img id="logo" src="images/logoLong.png" alt="" srcset="">
-        <!-- <h1>York Street Coffee</h1> -->
         <h2>a bi-weekly gathering space in the Mission</h2>
+
         <h3>A garage-grown, neighborly  community in the  Mission  District  of San Francisco.    We pop-up every other Saturday. You will meet someone new...and it’ll be great! We like to experiment with transparent pricing models, provacative flavor combos and artist collabs. coffee always served in reusable glassware.    No  to-go  cups,  no  to-go  experiences.   Donation  via   Venmo/cash.</h3>
     </div>
 
