--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <div class="text">
             <div class="next">Next Up: Coffee & Arts Fair</div>
             <div class="timeLocation">
-                11am - 3pm @ Evolved SF, 3067 24th St
+                11am - 3pm <br/>
+                @ Evolved SF, 3067 24th St
             </div>
             <a id="calLink" href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20220403T180000Z%2F20220403T220000Z&location=Evolved%20SF%2C%203067%2024th%20St&text=York%20Street%20Coffee" target="_blank" title="Save Event in my Calendar">Add to Calendar</a>
             <!-- https://www.labnol.org/calendar/ -->
