--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
             <img class="hero" src="images/hero.JPG" alt="" srcset="">
         </video>
         <img id="logo" src="images/logoLong.png" alt="" srcset="">
-        <h2>a bi-weekly gathering space in the Mission</h2>
-
-        <h3>A garage-grown, neighborly  community in the  Mission  District  of San Francisco.    We pop-up every other Saturday. You will meet someone new...and it’ll be great! We like to experiment with transparent pricing models, provacative flavor combos and artist collabs. coffee always served in reusable glassware.    No  to-go  cups,  no  to-go  experiences.   Donation  via   Venmo/cash.</h3>
+        <h2>A garage-grown, neighborly  gathering space in the  Mission  District  of &nbsp;&nbsp;San Francisco</h2>
+        <h3>YSC generally pops up every two weeks on the weekends, sometimes more. Each event is an opportunity for novelty, often featuring collabs with local artists, bakers, and musicians. We also to experiment with transparent pricing models, provacative flavor combos, and space design. coffee always served in reusable glassware.    No  to-go  cups,  no  to-go  experiences.   Donation  via   Venmo/cash.</h3>
     </div>
 
     <a href="https://www.instagram.com/yorkstreetsf" target="_blank" id="instaButton" title="instagram">
