--- a/index.html
+++ b/index.html
@@ -38,6 +38,26 @@
         <h3>YSC generally pops up every two weeks on the weekends, sometimes more. Each event is an opportunity for novelty, often featuring collabs with local artists, bakers, and musicians. We also to experiment with transparent pricing models, provacative flavor combos, and space design. coffee always served in reusable glassware.    No  to-go  cups,  no  to-go  experiences.   Donation  via   Venmo/cash.</h3>
     </div>
 
+    <div id="imageContainer">
+        <img class="left" src="/images/1.jpg" alt="" srcset="">
+        <img class="right" src="/images/2.jpg" alt="" srcset="">
+        <img class="left" src="/images/3.jpg" alt="" srcset="">
+        <img class="right" src="/images/4.jpg" alt="" srcset="">
+        <img class="left" src="/images/5.jpg" alt="" srcset="">
+        <img class="right" src="/images/6.jpg" alt="" srcset="">
+        <img class="left" src="/images/7.jpg" alt="" srcset="">
+        <img class="right" src="/images/8.jpg" alt="" srcset="">
+        <img class="left" src="/images/9.jpg" alt="" srcset="">
+        <img class="right" src="/images/10.jpg" alt="" srcset="">
+        <img class="left" src="/images/11.jpg" alt="" srcset="">
+        <img class="right" src="/images/12.jpg" alt="" srcset="">
+        <img class="left" src="/images/13.jpg" alt="" srcset="">
+        <img class="right" src="/images/14.jpg" alt="" srcset="">
+        <img class="left" src="/images/15.jpg" alt="" srcset="">
+        <img class="right" src="/images/16.jpg" alt="" srcset="">
+
+    </div>
+
     <a href="https://www.instagram.com/yorkstreetsf" target="_blank" id="instaButton" title="instagram">
         <svg width="28" height="32" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M19.8333 2.33337H8.16665C4.94499 2.33337 2.33331 4.94505 2.33331 8.16671V19.8334C2.33331 23.055 4.94499 25.6667 8.16665 25.6667H19.8333C23.055 25.6667 25.6666 23.055 25.6666 19.8334V8.16671C25.6666 4.94505 23.055 2.33337 19.8333 2.33337Z" stroke="#F8DCDA" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"/>
