--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <img class="right" src="/images/14.jpg" alt="" srcset="">
         <img class="left" src="/images/15.jpg" alt="" srcset="">
         <img class="right" src="/images/16.jpg" alt="" srcset="">
-
     </div>
+    <h1 style="margin-bottom: 36px;">SEE YOU THERE!</h1>
 
     <a href="https://www.instagram.com/yorkstreetsf" target="_blank" id="instaButton" title="instagram">
         <svg width="28" height="32" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -65,6 +65,12 @@
           <path d="M20.4167 7.58337H20.4284" stroke="#F8DCDA" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
     </a>
+
+    <div id="openToAll">
+        COME ONE<br/>COME ALL
+    </div>
+
+    <script src="main.js"></script>
     
 </body>
 </html>
