--- a/index.html
+++ b/index.html
@@ -35,26 +35,32 @@
         </video>
         <img id="logo" src="images/logoLong.png" alt="" srcset="">
         <h2>A garage-grown, neighborly  gathering space in the  Mission  District  of &nbsp;&nbsp;San Francisco</h2>
-        <h3>YSC generally pops up every two weeks on the weekends, sometimes more. Each event is an opportunity for novelty, often featuring collabs with local artists, bakers, and musicians. We also to experiment with transparent pricing models, provacative flavor combos, and space design. coffee always served in reusable glassware.    No  to-go  cups,  no  to-go  experiences.   Donation  via   Venmo/cash.</h3>
+        <h3>YSC generally pops up <span style="text-decoration: underline;">every two weeks on Saturday mornings</span>, sometimes more. Each event is an opportunity for novelty, often featuring collabs with local artists, bakers, and musicians. We also try to experiment with fair pricing models, provacative flavor combos, and space design. Our coffee is always served in reusable glassware. No to-go  cups, no to-go experiences. Donation via Venmo/cash.</h3>
     </div>
 
     <div id="imageContainer">
-        <img class="left" src="/images/1.jpg" alt="" srcset="">
-        <img class="right" src="/images/2.jpg" alt="" srcset="">
-        <img class="left" src="/images/3.jpg" alt="" srcset="">
-        <img class="right" src="/images/4.jpg" alt="" srcset="">
-        <img class="left" src="/images/5.jpg" alt="" srcset="">
-        <img class="right" src="/images/6.jpg" alt="" srcset="">
-        <img class="left" src="/images/7.jpg" alt="" srcset="">
-        <img class="right" src="/images/8.jpg" alt="" srcset="">
-        <img class="left" src="/images/9.jpg" alt="" srcset="">
-        <img class="right" src="/images/10.jpg" alt="" srcset="">
-        <img class="left" src="/images/11.jpg" alt="" srcset="">
-        <img class="right" src="/images/12.jpg" alt="" srcset="">
-        <img class="left" src="/images/13.jpg" alt="" srcset="">
-        <img class="right" src="/images/14.jpg" alt="" srcset="">
-        <img class="left" src="/images/15.jpg" alt="" srcset="">
-        <img class="right" src="/images/16.jpg" alt="" srcset="">
+        <img src="/images/1.jpg" alt="" srcset="">
+        <img src="/images/coffee1.jpg" alt="" srcset="">
+        <img src="/images/2.jpg" alt="" srcset="">
+        <img src="/images/food3.jpg" alt="" srcset="">
+        <img src="/images/3.jpg" alt="" srcset="">
+        <img src="/images/food9.jpg" alt="" srcset="">
+        <img src="/images/4.jpg" alt="" srcset="">
+        <img src="/images/food10.jpg" alt="" srcset="">
+        <img src="/images/5.jpg" alt="" srcset="">
+        <img src="/images/coffee3.jpg" alt="" srcset="">
+        <img src="/images/6.jpg" alt="" srcset="">
+        <img src="/images/food5.jpg" alt="" srcset="">
+        <img src="/images/7.jpg" alt="" srcset="">
+        <img src="/images/8.jpg" alt="" srcset="">
+        <img src="/images/9.jpg" alt="" srcset="">
+        <img src="/images/10.jpg" alt="" srcset="">
+        <img src="/images/11.jpg" alt="" srcset="">
+        <img src="/images/12.jpg" alt="" srcset="">
+        <img src="/images/13.jpg" alt="" srcset="">
+        <img src="/images/14.jpg" alt="" srcset="">
+        <img src="/images/15.jpg" alt="" srcset="">
+        <img src="/images/16.jpg" alt="" srcset="">
     </div>
     <h1 style="margin-bottom: 36px;">SEE YOU THERE!</h1>
 
