most of griffins feedback

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
         <img src="/images/15.jpg" alt="" srcset="">
         <img src="/images/16.jpg" alt="" srcset="">
     </div>
+
+    <h1 style="margin-bottom: 36px;">SEE YOU THERE!</h1>
     
     <a href="https://www.instagram.com/yorkstreetsf" target="_blank" id="instaButton" title="instagram">
         <svg width="28" height="32" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
