--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>York Street Coffee</title>
+    <link rel="preload" href="/fonts/Nighty.otf" as="font" type="font/opentype" crossorigin>
     <link rel="stylesheet" href="main.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -34,7 +35,6 @@
     <div id="main">
         <video class="hero" width="290" height="200" autoplay muted loop playsinline>
             <source src="images/trailer.mp4" type="video/mp4">
-            <img class="hero" src="images/hero.JPG" alt="" srcset="">
         </video>
         <img id="logo" src="images/logoLong.png" alt="" srcset="">
         <h2>A garage-grown popup and gathering&nbsp; space &nbsp;in the &nbsp;Mission</h2>
@@ -47,23 +47,23 @@
 
     <div id="imageContainer">
         <img src="/images/1.jpg" alt="" srcset="">
-        <img src="/images/coffee1.jpg" alt="" srcset="">
-        <img src="/images/4.jpg" alt="" srcset="">
-        <img src="/images/food3.jpg" alt="" srcset="">
-        <img src="/images/3.jpg" alt="" srcset="">
-        <img src="/images/food9.jpg" alt="" srcset="">
-        <img src="/images/13.jpg" alt="" srcset="">
-        <img src="/images/food10.jpg" alt="" srcset="">
-        <img src="/images/14.jpg" alt="" srcset="">
-        <img src="/images/coffee5.jpg" alt="" srcset="">
-        <img src="/images/6.jpg" alt="" srcset="">
-        <img src="/images/food5.jpg" alt="" srcset="">
-        <img src="/images/7.jpg" alt="" srcset="">
-        <img src="/images/9.jpg" alt="" srcset="">
-        <img src="/images/10.jpg" alt="" srcset="">
-        <img src="/images/12.jpg" alt="" srcset="">
-        <img src="/images/15.jpg" alt="" srcset="">
-        <img src="/images/16.jpg" alt="" srcset="">
+        <img loading="lazy" src="/images/coffee1.jpg" alt="" srcset="">
+        <img loading="lazy" src="/images/4.jpg" alt="" srcset="">
+        <img loading="lazy" src="/images/food3.jpg" alt="" srcset="">
+        <img loading="lazy" src="/images/3.jpg" alt="" srcset="">
+        <img loading="lazy" src="/images/food9.jpg" alt="" srcset="">
+        <img loading="lazy" src="/images/13.jpg" alt="" srcset="">
+        <img loading="lazy" src="/images/food10.jpg" alt="" srcset="">
+        <img loading="lazy" src="/images/14.jpg" alt="" srcset="">
+        <img loading="lazy" src="/images/coffee5.jpg" alt="" srcset="">
+        <img loading="lazy" src="/images/6.jpg" alt="" srcset="">
+        <img loading="lazy" src="/images/food5.jpg" alt="" srcset="">
+        <img loading="lazy" src="/images/7.jpg" alt="" srcset="">
+        <img loading="lazy" src="/images/9.jpg" alt="" srcset="">
+        <img loading="lazy" src="/images/10.jpg" alt="" srcset="">
+        <img loading="lazy" src="/images/12.jpg" alt="" srcset="">
+        <img loading="lazy" src="/images/15.jpg" alt="" srcset="">
+        <img loading="lazy" src="/images/16.jpg" alt="" srcset="">
     </div>
 
     <h1 style="margin-bottom: 36px;">SEE YOU THERE!</h1>
