--- a/index.html
+++ b/index.html
@@ -33,19 +33,23 @@
     </div>
 
     <div id="main">
-        <video class="hero" width="290" height="200" autoplay muted loop playsinline>
+        <img id="heroImage" src="images/hero.JPG" alt="">
+        <video id="heroVideo" width="290" height="200" autoplay muted loop playsinline>
             <source src="images/trailer.mp4" type="video/mp4">
         </video>
         <img id="logo" src="images/logoLong.png" alt="" srcset="">
-        <h2>A garage-grown popup and gathering&nbsp; space &nbsp;in the &nbsp;Mission</h2>
-        <h3>YSC generally pops up <span style="color:#C6473C">every two weeks on Saturday mornings</span>, often more. Each event is an opportunity for novelty, often featuring collabs with local artists, bakers, and musicians. We also try to experiment with fair pricing models, provacative flavor combos, and space design. Our coffee is always served in reusable glassware. No to-go  cups, no to-go experiences. Donation via Venmo/cash.</h3>
-        
+        <h2>A garage-grown popup and gathering&nbsp; space &nbsp;in the &nbsp;Mission</h2>        
         <div id="openToAll">
             COME ONE<br/>COME ALL
         </div>
     </div>
 
+    <hr>
+
     <div id="imageContainer">
+        <h1>What is York Street</h1>
+        <h3>YSC generally pops up <span style="color:#C6473C">every two weeks on Saturday mornings</span>, often more. Each event is an opportunity for novelty, often featuring collabs with local artists, bakers, and musicians. We also try to experiment with fair pricing models, provacative flavor combos, and space design. Our coffee is always served in reusable glassware. No to-go  cups, no to-go experiences. Donation via Venmo/cash.</h3>
+
         <img src="/images/1.jpg" alt="" srcset="">
         <img loading="lazy" src="/images/coffee1.jpg" alt="" srcset="">
         <img loading="lazy" src="/images/4.jpg" alt="" srcset="">
@@ -66,7 +70,7 @@
         <img loading="lazy" src="/images/16.jpg" alt="" srcset="">
     </div>
 
-    <h1 style="margin-bottom: 36px;">SEE YOU THERE!</h1>
+    <h1 style="margin-bottom: 80px;">SEE YOU THERE!</h1>
     
     <a href="https://www.instagram.com/yorkstreetsf" target="_blank" id="instaButton" title="instagram">
         <svg width="28" height="32" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
