--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <img loading="lazy" src="/images/16.jpg" alt="" srcset="">
     </div>
 
-    <h1 style="margin-bottom: 80px;">SEE YOU THERE!</h1>
+    <h1 style="margin-bottom: 80px; color:#F8DCDA">SEE YOU THERE!</h1>
     
     <a href="https://www.instagram.com/yorkstreetsf" target="_blank" id="instaButton" title="instagram">
         <svg width="28" height="32" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
