added shocial share iamges

--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+
+    <!-- HTML Meta Tags -->
+    <title>York Street Coffee</title>
+    <meta name="description" content="A garage-grown popup and gathering  space  in the  Mission">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://yorkstreet.coffee/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="York Street Coffee">
+    <meta property="og:description" content="A garage-grown popup and gathering  space  in the  Mission">
+    <meta property="og:image" content="images/cover.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="yorkstreet.coffee">
+    <meta property="twitter:url" content="https://yorkstreet.coffee/">
+    <meta name="twitter:title" content="York Street Coffee">
+    <meta name="twitter:description" content="A garage-grown popup and gathering  space  in the  Mission">
+    <meta name="twitter:image" content="images/cover.jpg">
+      
 </head>
 <body>
     <div id="nextEvent">
