added shocial share iamges

--- a/index.html
+++ b/index.html
@@ -43,10 +43,16 @@
             </div>
         </div>
         <div class="text">
-            <div class="next">Next Up: Bakesale Fundraiser & Happy Hour</div>
-            <div class="timeLocation">
+            <a href="https://www.instagram.com/yorkstreetsf" target="_blank"title="instagram">
+                <div class="next">
+                    Next Up: Bakesale Fundraiser & Happy Hour
+                </div>
+            </a>
+            <a href="https://www.instagram.com/yorkstreetsf" target="_blank"title="instagram">
+                <div class="timeLocation">
                 5:30 - 7:30pm @ York St & 25th
-            </div>
+                </div>
+            </a>
             <a id="calLink" href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20220403T180000Z%2F20220403T220000Z&location=Evolved%20SF%2C%203067%2024th%20St&text=York%20Street%20Coffee" target="_blank" title="Save Event in my Calendar">Add to Calendar</a>
             <!-- https://www.labnol.org/calendar/ -->
         </div>
@@ -67,7 +73,7 @@
     <hr>
 
     <div id="imageContainer">
-        <h1>What is York Street</h1>
+        <h1>About Us</h1>
         <h3>YSC generally pops up <span style="color:#C6473C">every two weeks on Saturday mornings</span>, often more. Each event is an opportunity for novelty, often featuring collabs with local artists, bakers, and musicians. We also try to experiment with fair pricing models, provacative flavor combos, and space design. Our coffee is always served in reusable glassware. No to-go  cups, no to-go experiences. Donation via Venmo/cash.</h3>
 
         <img src="/images/1.jpg" alt="" srcset="">
