--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
                 Apr
             </div>
             <div id="day">
-                15
+                23
             </div>
         </div>
         <div class="text">
             <a href="https://www.instagram.com/yorkstreetsf" target="_blank"title="instagram">
                 <div class="next">
-                    Next Up: Bakesale Fundraiser & Happy Hour
+                    Next Up: National Poetry Month Oakland
                 </div>
             </a>
             <a href="https://www.instagram.com/yorkstreetsf" target="_blank"title="instagram">
                 <div class="timeLocation">
-                5:30 - 7:30pm @ York St & 25th
+                11 - 2 @ Lower Grand, 4124 Broadway, Oakland
                 </div>
             </a>
-            <a id="calLink" href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20220403T180000Z%2F20220403T220000Z&location=Evolved%20SF%2C%203067%2024th%20St&text=York%20Street%20Coffee" target="_blank" title="Save Event in my Calendar">Add to Calendar</a>
+            <!-- <a id="calLink" href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20220403T180000Z%2F20220403T220000Z&location=Evolved%20SF%2C%203067%2024th%20St&text=York%20Street%20Coffee" target="_blank" title="Save Event in my Calendar">Add to Calendar</a> -->
             <!-- https://www.labnol.org/calendar/ -->
         </div>
     </div>
