food stuff update

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
     <div id="nextEvent">
         <div class="cal">
             <div id="month">
-                Apr
+                May
             </div>
             <div id="day">
-                30
+                14
             </div>
         </div>
         <div class="text">
             <a href="https://www.instagram.com/yorkstreetsf" target="_blank"title="instagram">
                 <div class="next">
-                    Next Up: "Have it your way" Coffee Bar
+                    Next Up: Coffee, Pineapple Cakes, Pottery
                 </div>
             </a>
             <a href="https://www.instagram.com/yorkstreetsf" target="_blank"title="instagram">
